--- a/MvcPL/Views/Photo/Add.cshtml
+++ b/MvcPL/Views/Photo/Add.cshtml
@@ -46,9 +46,10 @@
         </div>
         
         <div class="form-group">
-        @Html.Label("Choose Image", new {@class = "control-label col-sm-3"})
-            <div class="col-sm-5">
-                <input type="file" name="file" accept=".jpg, .png, .gif"/>
+            <div class="text-center file_upload">
+                <button type="button" class="btn btn-info">Choose image</button>
+                @*<div>File is not selected.</div>*@
+                <input type="file" name="file" accept=".jpg, .png, .gif" />
             </div>
         </div>
 
